--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
 <html>
+   <head>
+     <style>
+          img {
+    margin: 0 auto;
+    display: block;
+}
+     </style>
+    </head>
 <body>
 <h1><p style="text-align: center;color:red"›<strong> BÀI THƠ HAY VỀ MẸ </strong></p></h1>
 <h2><p style="text-align: center;color:blue;text-align"><strong› Lời ru của mẹ </strong></p></h2›
@@ -17,3 +25,4 @@
   <img src=https://static.tuoitre.vn/tto/i/s626/2013/10/17/ssfTa0Wa.jpg>
   <h3>Web được tạo bởi<span style-"text-decoration: underline"> Nguyễn Trần Minh Trân</span> lớp 12a6 trường THPT Tân An.</h3>
 </body>
+</html>
