--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
      </style>
     </head>
 <body>
-<h1><p style="text-align: center;color:red"›<strong> BÀI THƠ HAY VỀ MẸ </strong></p></h1>
+<h1><p style="text-align: center;color:red"><strong> BÀI THƠ HAY VỀ MẸ </strong></p></h1>
 <h2><p style="text-align: center;color:blue;text-align"><strong› Lời ru của mẹ </strong></p></h2›
 <h3><p style="text-align:center"><i>‹justify›Lắng nghe câu hát ầu ơ</justify>‹/i></p></h3>
 <h3><p style="text-align:center"><i><justify›Tuổi già ôm ấp ước mơ an lành</justify></i></p></h3>
