--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <h1><p style="text-align: center;color:red"><strong> BÀI THƠ HAY VỀ MẸ </strong></p></h1>
 <h2><p style="text-align: center;color:blue;text-align"><strong› Lời ru của mẹ </strong></p></h2›
-<h3><p style="text-align:center"><i><justify></justify>Lắng nghe câu hát ầu ơ</justify></i></p></h3>
+<h3><p style="text-align:center"><i><justify>Lắng nghe câu hát ầu ơ</justify></i></p></h3>
 <h3><p style="text-align:center"><i><justify>Tuổi già ôm ấp ước mơ an lành</justify></i></p></h3>
 <h3><p style="text-align:center" ><i>Tóc người tuy chẳng còn xanh</i></p></h3>
 <h3><p style="text-align:center" ><i>Nhưng tâm hồn vẫn nẩy cành đơm hoa</i></p></h3>
