--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
 <body>
 <h1><p style="text-align: center;color:red"><strong> BÀI THƠ HAY VỀ MẸ </strong></p></h1>
-<h2><p style="text-align: center;color:blue;text-align"><strong› Lời ru của mẹ </strong></p></h2›
+<h2><p style="text-align: center;color:blue;text-align"><strong> Lời ru của mẹ </strong></p></h2›
 <h3><p style="text-align:center"><i><justify>Lắng nghe câu hát ầu ơ</justify></i></p></h3>
 <h3><p style="text-align:center"><i><justify>Tuổi già ôm ấp ước mơ an lành</justify></i></p></h3>
 <h3><p style="text-align:center" ><i>Tóc người tuy chẳng còn xanh</i></p></h3>
@@ -23,6 +23,6 @@
 <h3><p style="text-align:center" ><i>Nhờ vòng tay ấm quên ngay muộn phiền</i></p></h3>
 <h3><p style="text-align:center" ><i>Mong sao gia cảnh đoàn viên</i></p></h3>
   <img src=https://static.tuoitre.vn/tto/i/s626/2013/10/17/ssfTa0Wa.jpg>
-  <h3>Web được tạo bởi<span style-"text-decoration: underline"> Nguyễn Trần Minh Trân</span> lớp 12a6 trường THPT Tân An.</h3>
+  <h3>Web được tạo bởi<span style="text-decoration: underline"> Nguyễn Trần Minh Trân</span> lớp 12a6 trường THPT Tân An.</h3>
 </body>
 </html>
